change: use fastp and star tools by default

--- a/nextflow.config
+++ b/nextflow.config
@@ -36,8 +36,8 @@ params {
     */
     
     tools {
-        trim = 'cutadapt'
-        map  = 'bwa-mem2'
+        trim = 'fastp'
+        map  = 'star'
     }
 
     /*
