feat: qualimap rnaseq module

--- a/conf/args.config
+++ b/conf/args.config
@@ -39,6 +39,10 @@ process {
         ext.argsDefault = [:]
     }
 
+    withName: 'qualimap_rnaseq' {
+        ext.argsDefault = [:]
+    }
+
     withName: 'star_genomeGenerate' {
         ext.argsDefault = [:]
     }
