--- a/conf/containers.config
+++ b/conf/containers.config
@@ -31,6 +31,10 @@ process {
         container = "https://depot.galaxyproject.org/singularity/multiqc%3A1.14--pyhdfd78af_0"
     }
 
+    withLabel: 'qualimap' {
+        container = "https://depot.galaxyproject.org/singularity/qualimap%3A2.3--hdfd78af_0"
+    }
+
     withLabel: 'samtools' {
         container = 'https://depot.galaxyproject.org/singularity/samtools%3A1.17--hd87286a_1'
     }
