feat: featureCounts process

--- a/conf/args.config
+++ b/conf/args.config
@@ -22,6 +22,20 @@ process {
         ext.argsDefault = [:]
     }
 
+    withName: 'featureCounts' {
+        ext.argsDefault = [:]
+        ext.argsDynamic = {
+            def dynamicMap = [:]
+
+            // set dynamic flags for paired-end reads
+            if (metadata.readType == 'paired') dynamicMap += ['-p': '']
+            if (metadata.readType == 'paired') dynamicMap += ['--countReadPairs': '']
+            if (metadata.readType == 'paired') dynamicMap += ['-B': '']
+
+            return dynamicMap
+        }
+    }
+
     withName: 'gatk_MarkDuplicates' {
         ext.argsDefault = [
             '--VALIDATION_STRINGENCY': 'SILENT',
