--- a/conf/containers.config
+++ b/conf/containers.config
@@ -42,4 +42,8 @@ process {
     withLabel: 'star' {
         container = 'https://depot.galaxyproject.org/singularity/star%3A2.7.11a--h0033a41_0'
     }
+
+    withLabel: 'subread' {
+        container = 'https://depot.galaxyproject.org/singularity/subread%3A2.0.6--he4a0461_0'
+    }
 }
