refactor: dynamic flags for featureCounts PE reads

--- a/conf/args.config
+++ b/conf/args.config
@@ -28,10 +28,13 @@ process {
             def dynamicMap = [:]
 
             // set dynamic flags for paired-end reads
-            if (metadata.readType == 'paired') dynamicMap += ['-p': '']
-            if (metadata.readType == 'paired') dynamicMap += ['--countReadPairs': '']
-            if (metadata.readType == 'paired') dynamicMap += ['-B': '']
-
+            def pairedEndFlags = ['-p', '--countReadPairs', '-B']
+            if (metadata.readType == 'paired') {
+                pairedEndFlags.each { key -> 
+                    dynamicMap.put(key, '')
+                }
+            }
+            
             return dynamicMap
         }
     }
