chore: sync updated upstream

--- a/conf/args.config
+++ b/conf/args.config
@@ -22,6 +22,23 @@ process {
         ext.argsDefault = [:]
     }
 
+    withName: 'featureCounts' {
+        ext.argsDefault = [:]
+        ext.argsDynamic = {
+            def dynamicMap = [:]
+
+            // set dynamic flags for paired-end reads
+            def pairedEndFlags = ['-p', '--countReadPairs', '-B']
+            if (metadata.readType == 'paired') {
+                pairedEndFlags.each { key -> 
+                    dynamicMap.put(key, '')
+                }
+            }
+            
+            return dynamicMap
+        }
+    }
+
     withName: 'gatk_MarkDuplicates' {
         ext.argsDefault = [
             '--VALIDATION_STRINGENCY': 'SILENT',
@@ -36,6 +53,10 @@ process {
     }
 
     withName: 'multiqc' {
+        ext.argsDefault = [:]
+    }
+
+    withName: 'qualimap_rnaseq' {
         ext.argsDefault = [:]
     }
 
