--- a/nextflow.config
+++ b/nextflow.config
@@ -2,9 +2,9 @@ manifest {
     author            = 'Trevor F. Freeman; Ryan D. Kuster'
     defaultBranch     = 'main'
     recurseSubmodules = true
-    description       = 'A Nextflow pipeline for base NGS analysis.'
+    description       = 'A Nextflow pipeline for RNA-seq analysis built on utia-gc/ngs.'
     mainScript        = 'main.nf'
-    name              = 'utia-gc/ngs'
+    name              = 'utia-gc/rnaseq'
     nextflowVersion   = '>=21.04'
     version           = 'v0.0.0.9000'
 }
@@ -30,7 +30,7 @@ params {
     
     tools {
         trim = 'fastp'
-        map  = 'bwa-mem2'
+        map  = 'star'
     }
 
     /*
