feat: make counts matrix in main workflow

--- a/conf/containers.config
+++ b/conf/containers.config
@@ -31,6 +31,10 @@ process {
         container = "https://depot.galaxyproject.org/singularity/multiqc%3A1.14--pyhdfd78af_0"
     }
 
+    withLabel: 'pandas' {
+        container = "https://depot.galaxyproject.org/singularity/pandas%3A1.5.2"
+    }
+
     withLabel: 'qualimap' {
         container = "https://depot.galaxyproject.org/singularity/qualimap%3A2.3--hdfd78af_0"
     }
