--- a/conf/args.config
+++ b/conf/args.config
@@ -58,6 +58,8 @@ process {
     }
 
     withName: 'star_runMapping' {
-        ext.argsDefault = [:]
+        ext.argsDefault = [
+            '--outSAMunmapped': 'Within KeepPairs',
+        ]
     }
 }
