fix: tidy up resource requests and limits (#125)
* fix: remove unused config profiles

* refactor: use resourceLimits to limit resource requests

* refactor: use resourceLimits to limit resource requests in nf-test

* fix: remove unused config profiles

* chore: bump required nextflow version >=24.04

* refactor: tidy condo_trowan1 resource configurations

* feat: add default resource settings

* docs: resource limits

--- a/conf/nf_test.config
+++ b/conf/nf_test.config
@@ -5,17 +5,23 @@ profiles {
             samplesheet   = "${projectDir}/tests/data/samplesheets/mixed-ends_lanes.csv"
             genome        = "${projectDir}/tests/data/references/R64-1-1/genome_I.fa.gz"
             annotations   = "${projectDir}/tests/data/references/R64-1-1/annotations_I.gtf.gz"
-
-            // max resources
-            maxCpus   = 2
-            maxMemory = '4.GB'
-            maxTime   = '15.m'
         }
         
         singularity {
             enabled = true
             cacheDir = "${SCRATCHDIR}/singularity/"
             autoMounts = true
+        }
+
+        process {
+            /*
+            Resource request configs
+            */
+            resourceLimits = [
+                cpus:   2,
+                memory: 4.GB,
+                time:   15.min
+            ]
         }
     }
 }
