fix(cookiecutter): ngs configs (#127)

--- a/cookiecutter/{{ cookiecutter.project_slug }}/config/nextflow/setup.config
+++ b/cookiecutter/{{ cookiecutter.project_slug }}/config/nextflow/setup.config
@@ -1,7 +1,7 @@
 /** 
  * setup.config
  *
- * A Nextflow config file for user configuration of utia-gc/setup.
+ * A Nextflow config file for user configuration of utia-gc/ngs/setup.nf.
 */
 
 
