--- a/nextflow.config
+++ b/nextflow.config
@@ -37,7 +37,6 @@ params {
     */
     trimTool       = 'fastp'
     adapterFasta   = "${projectDir}/assets/NO_FILE"
-    skipTrimReads  = false
 
     /*
     ---------------------------------------------------------------------
@@ -45,6 +44,15 @@ params {
     ---------------------------------------------------------------------
     */
     mapTool = 'bwamem2'
+
+    /*
+    ---------------------------------------------------------------------
+        Skip steps options
+    ---------------------------------------------------------------------
+    */
+    skipTrimReads         = false
+    skipRawReadDepth      = false
+    skipPrealignReadDepth = false
 }
 
 
