fix: resource request overwriting (#133)

--- a/nextflow.config
+++ b/nextflow.config
@@ -56,6 +56,19 @@ params {
 }
 
 
+/*
+---------------------------------------------------------------------
+    Import config files
+---------------------------------------------------------------------
+*/
+includeConfig 'conf/args.config'
+includeConfig 'conf/containers.config'
+includeConfig 'conf/plugins.config'
+includeConfig 'conf/reporting.config'
+includeConfig 'conf/resources.config'
+
+
+includeConfig 'conf/isaac.config'
 profiles {
     exploratory {
         params {
@@ -70,15 +83,3 @@ profiles {
         includeConfig 'conf/nf_test.config'
     }
 }
-
-/*
----------------------------------------------------------------------
-    Import config files
----------------------------------------------------------------------
-*/
-includeConfig 'conf/args.config'
-includeConfig "conf/containers.config"
-includeConfig 'conf/isaac.config'
-includeConfig 'conf/plugins.config'
-includeConfig 'conf/reporting.config'
-includeConfig 'conf/resources.config'
