fix: skip compute read depth by default

--- a/nextflow.config
+++ b/nextflow.config
@@ -51,8 +51,8 @@ params {
     ---------------------------------------------------------------------
     */
     skipTrimReads         = false
-    skipRawReadDepth      = false
-    skipPrealignReadDepth = false
+    skipRawReadDepth      = true
+    skipPrealignReadDepth = true
 }
 
 
