feat: don't write SMART-Seq 3' DE R2 reads to samplesheet
Closes utia-gc/rnaseq#46

--- a/nextflow.config
+++ b/nextflow.config
@@ -82,4 +82,8 @@ profiles {
     nf_test {
         includeConfig 'conf/nf_test.config'
     }
+
+    smartSeq3DE {
+        params.writeR2ToSamplesheet = false
+    }
 }
