feat: trim SMART-Seq 3' DE libraries for polyG and polyA

--- a/nextflow.config
+++ b/nextflow.config
@@ -84,6 +84,9 @@ profiles {
     }
 
     smartSeq3DE {
+        // trim polyG and polyA sequences specifically
+        params.adapterFasta = "${projectDir}/assets/smart-seq-3de-adapters.fasta"
+        // don't write R2 reads to samplesheet
         params.writeR2ToSamplesheet = false
     }
 }
