--- a/nextflow.config
+++ b/nextflow.config
@@ -82,4 +82,11 @@ profiles {
     nf_test {
         includeConfig 'conf/nf_test.config'
     }
+
+    smartSeq3DE {
+        // trim polyG and polyA sequences specifically
+        params.adapterFasta = "${projectDir}/assets/smart-seq-3de-adapters.fasta"
+        // don't write R2 reads to samplesheet
+        params.writeR2ToSamplesheet = false
+    }
 }
