fix: use workdir specific to project on isaac
Squashed commit of the following:

commit 22a9e2876a50c8d3ffcde7ce0bd4cae6bffa4c82
Author: Trevor F. Freeman <tfreem10@vols.utk.edu>
Date:   Tue Mar 11 16:54:40 2025 -0400

    fix: use workdir specific to project

commit 1903e4b6fcb09c0b7ee40ff94b8df4d216eb1b0e
Author: Trevor F. Freeman <tfreem10@vols.utk.edu>
Date:   Tue Mar 11 16:42:33 2025 -0400

    docs: document exploratory tag in exploratory doc

commit 303dcd8aae76fd7fd8a8e46e2c70f36e597ff76d
Author: Trevor F. Freeman <tfreem10@vols.utk.edu>
Date:   Tue Mar 11 16:38:26 2025 -0400

    feat: exploratory tag parameter

commit 603341dfb4384d728b6ed385a155755798e5b1e9
Author: Trevor F. Freeman <tfreem10@vols.utk.edu>
Date:   Tue Mar 11 16:12:13 2025 -0400

    fix: don't use project title param in subworkflow

--- a/conf/isaac.config
+++ b/conf/isaac.config
@@ -1,6 +1,6 @@
 profiles {
     condo_trowan1 {
-        workDir = "${SCRATCHDIR}/nf_work"
+        workDir = "${SCRATCHDIR}/nf_work/${params.projectTitle}"
 
         executor {
             queueSize       = 50
