--- a/nextflow.config
+++ b/nextflow.config
@@ -18,8 +18,9 @@ params {
     ---------------------------------------------------------------------
     */
     // input options
-    projectTitle = null
-    samplesheet  = null
+    projectTitle   = null
+    exploratoryTag = null
+    samplesheet    = null
 
     // reference options
     genome      = null
@@ -72,8 +73,9 @@ includeConfig 'conf/isaac.config'
 profiles {
     exploratory {
         params {
-            publishDirData    = "${launchDir}/exploratory/${timestamp}_${params.projectTitle}/data"
-            publishDirReports = "${launchDir}/exploratory/${timestamp}_${params.projectTitle}/reports"
+            exploratoryTag    = 'exploratory'
+            publishDirData    = "${launchDir}/exploratory/${timestamp}_${params.projectTitle}_${params.exploratoryTag}/data"
+            publishDirReports = "${launchDir}/exploratory/${timestamp}_${params.projectTitle}_${params.exploratoryTag}/reports"
             publishMode       = 'symlink'
         }
         resume = true
