--- a/conf/reporting.config
+++ b/conf/reporting.config
@@ -1,23 +1,23 @@
 dag {
     enabled   = true
-    file      = "${params.publishDirReports}/summary/${timestamp}_dag.html"
+    file      = "${params.publishDirReports}/.pipeline_execution_stats/${timestamp}_dag.html"
     overwrite = true
 }
 
 report {
     enabled   = true
-    file      = "${params.publishDirReports}/summary/${timestamp}_report.html"
+    file      = "${params.publishDirReports}/.pipeline_execution_stats/${timestamp}_report.html"
     overwrite = true
 }
 
 timeline{
     enabled   = true
-    file      = "${params.publishDirReports}/summary/${timestamp}_timeline.html"
+    file      = "${params.publishDirReports}/.pipeline_execution_stats/${timestamp}_timeline.html"
     overwrite = true
 }
 
 trace {
     enabled   = true
-    file      = "${params.publishDirReports}/summary/${timestamp}_trace.txt"
+    file      = "${params.publishDirReports}/.pipeline_execution_stats/${timestamp}_trace.txt"
     overwrite = true
 }
