fix: SIGBUS errors from java programs filling up /tmp

--- a/conf/isaac.config
+++ b/conf/isaac.config
@@ -19,6 +19,11 @@ profiles {
             clusterOptions = '--account=ACF-UTK0171 --partition=condo-trowan1 --qos=condo'
 
             /*
+            Make caching more reliable on ISAAC-NG
+            */
+            cache = 'lenient'
+
+            /*
             Set what happens if a process fails
             */
             errorStrategy = { task.exitStatus in 137..140 ? 'retry' : 'finish' }
