--- a/nextflow.config
+++ b/nextflow.config
@@ -65,12 +65,18 @@ params {
 includeConfig 'conf/args.config'
 includeConfig 'conf/containers.config'
 includeConfig 'conf/plugins.config'
-includeConfig 'conf/reporting.config'
-includeConfig 'conf/resources.config'
 
-
-includeConfig 'conf/isaac.config'
 profiles {
+    standard {
+        includeConfig 'conf/resources.config'
+        includeConfig 'conf/reporting.config'
+    }
+
+    condo_trowan1 {
+        includeConfig 'conf/isaac.config'
+        includeConfig 'conf/reporting.config'
+    }
+
     exploratory {
         params {
             exploratoryTag    = 'exploratory'
@@ -79,6 +85,7 @@ profiles {
             publishMode       = 'symlink'
         }
         resume = true
+        includeConfig 'conf/reporting.config'
     }
 
     nf_test {
