feat: profile for setup params
Squashed commit of the following:

commit 75afd67128f167c628ca2c704be536f648e64e03
Author: Trevor F. Freeman <tfreem10@vols.utk.edu>
Date:   Thu May 22 15:26:51 2025 -0400

    fix[cc]: use setup config in run setup script

commit 5e052139ee4aae9279da647969b8413002a6337a
Author: Trevor F. Freeman <tfreem10@vols.utk.edu>
Date:   Thu May 22 15:24:44 2025 -0400

    fix[cc]: remove setup config from cookiecutter

commit 536218f187d64341757a571a0cf7f98357cfdf0f
Author: Trevor F. Freeman <tfreem10@vols.utk.edu>
Date:   Thu May 22 15:22:40 2025 -0400

    feat: add setup config profile

Closes #141

--- a/nextflow.config
+++ b/nextflow.config
@@ -91,4 +91,19 @@ profiles {
     nf_test {
         includeConfig 'conf/nf_test.config'
     }
+
+    setup {
+        params {
+            readsDest   = "data/reads/raw"
+            samplesheet = "config/samplesheets/samplesheet.csv"
+            decode      = "config/samplesheets/sample-name-decode.csv"
+            overwrite   = false
+        }
+
+        // Turn off report creation
+        dag.enabled      = false
+        report.enabled   = false
+        timeline.enabled = false
+        trace.enabled    = false
+    }
 }
