feat: add hardlink option for copying setup fastqs
Squashed commit of the following:

commit 680b3c4c78ae2d6a01b1b23c746726c6ea8c9f6e
Author: Trevor F. Freeman <tfreem10@vols.utk.edu>
Date:   Thu May 22 19:07:23 2025 -0400

    feat[setup;cc]: default to hardlink fastq copy mode in cookiecutter

commit 000838d01bc632727e6d7162869e9e5f5a79c58b
Author: Trevor F. Freeman <tfreem10@vols.utk.edu>
Date:   Thu May 22 19:05:36 2025 -0400

    feat[setup]: add hardlink option for setup

Closes: #139

--- a/nextflow.config
+++ b/nextflow.config
@@ -94,10 +94,11 @@ profiles {
 
     setup {
         params {
-            readsDest   = "data/reads/raw"
-            samplesheet = "config/samplesheets/samplesheet.csv"
-            decode      = "config/samplesheets/sample-name-decode.csv"
-            overwrite   = false
+            readsDest     = 'data/reads/raw'
+            samplesheet   = 'config/samplesheets/samplesheet.csv'
+            decode        = 'config/samplesheets/sample-name-decode.csv'
+            fastqCopyMode = 'copy'
+            overwrite     = false
         }
 
         // Turn off report creation
