fix: move write R2 to samplesheet to config

--- a/nextflow.config
+++ b/nextflow.config
@@ -92,20 +92,14 @@ profiles {
         includeConfig 'conf/nf_test.config'
     }
 
-    smartSeq3DE {
-        // trim polyG and polyA sequences specifically
-        params.adapterFasta = "${projectDir}/assets/smart-seq-3de-adapters.fasta"
-        // don't write R2 reads to samplesheet
-        params.writeR2ToSamplesheet = false
-    }
-
     setup {
         params {
-            readsDest     = 'data/reads/raw'
-            samplesheet   = 'config/samplesheets/samplesheet.csv'
-            decode        = 'config/samplesheets/sample-name-decode.csv'
-            fastqCopyMode = 'copy'
-            overwrite     = false
+            readsDest            = 'data/reads/raw'
+            samplesheet          = 'config/samplesheets/samplesheet.csv'
+            decode               = 'config/samplesheets/sample-name-decode.csv'
+            fastqCopyMode        = 'copy'
+            overwrite            = false
+            writeR2ToSamplesheet = true
         }
 
         // Turn off report creation
@@ -113,5 +107,12 @@ profiles {
         report.enabled   = false
         timeline.enabled = false
         trace.enabled    = false
+    }
+
+    smartSeq3DE {
+        // trim polyG and polyA sequences specifically
+        params.adapterFasta = "${projectDir}/assets/smart-seq-3de-adapters.fasta"
+        // don't write R2 reads to samplesheet
+        params.writeR2ToSamplesheet = false
     }
 }
