--- a/nextflow.config
+++ b/nextflow.config
@@ -6,7 +6,7 @@ manifest {
     mainScript        = 'main.nf'
     name              = 'utia-gc/rnaseq'
     nextflowVersion   = '!>=24.04'
-    version           = 'main'
+    version           = 'v0.7.0'
 }
 
 timestamp = new java.util.Date().format('yyyy-MM-dd_HH-mm')
